--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@testing-library/react-hooks": "^3.4.1",
     "@testing-library/user-event": "^12.1.4",
     "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^24.0.1",
     "eslint-plugin-jest-dom": "^3.2.3",
     "eslint-plugin-jsx-a11y": "^6.3.1",
